--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,26 +1,130 @@
-$backgroundColor: #efefef;
+$backgroundColor: #fffbfb;
 $radius: 40%;
 
 form {
+  display: flex;
+
   display: inline-block;
   margin: auto;
-  width: 200px;
+
+  input {
+    display: flex;
+    align-self: center;
+    height: 30px;
+    min-width: 300px;
+  }
+
+  button {
+    align-items: center;
+    background-color: #fee6e3;
+    border: 2px solid #111;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #111;
+    cursor: pointer;
+    display: flex;
+    font-family: Inter, sans-serif;
+    font-size: 16px;
+    height: 48px;
+    justify-content: center;
+    line-height: 24px;
+    max-width: 100%;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 25px;
+  }
+
+  button:after {
+    background-color: #111;
+    border-radius: 8px;
+    content: "";
+    display: block;
+    height: 48px;
+    left: 0;
+    width: 100%;
+    position: absolute;
+    top: -2px;
+    transform: translate(8px, 8px);
+    transition: transform 0.2s ease-out;
+    z-index: -1;
+  }
+
+  button:hover:after {
+    transform: translate(0, 0);
+  }
+
+  button:active {
+    background-color: #ffdeda;
+    outline: 0;
+  }
+
+  button:hover {
+    outline: 0;
+  }
+
+  @media (min-width: 768px) {
+    button {
+      padding: 0 40px;
+    }
+  }
 
   label {
     display: flex;
     margin: 1rem 0;
+    justify-content: center;
 
     &.methods {
       span {
         cursor: pointer;
         margin-right: 1rem;
-        padding: .25rem .5rem;
+        padding: 0.25rem 0.5rem;
         background: #ccc;
 
-        &:hover, &.active {
+        &:hover,
+        &.active {
           background: #fff;
         }
       }
     }
+  }
+}
+
+.crud {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.crud:hover {
+  background-color: #fff;
+}
+
+.crud:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .crud {
+    min-width: 120px;
+    padding: 0 25px;
   }
 }
