added color theme and more scss

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,14 @@
-$backgroundColor: #f5f5f5;
+$backgroundColor: #d1cfe2ff;
 
-html, body {
+/*COLOR THEME */
+$cameo-pink: #d4afb9ff;
+$light-periwinkle: #d1cfe2ff;
+$wild-blue-yonder: #9cadceff;
+$middle-blue: #7ec4cfff;
+$maximum-blue: #52b2cfff;
+
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
